tests/paczka1/small_fuzzy/73204217.err
Error in line 1: ol0 S797 22,7
Error in line 6: H5QLV3 S797 86,7
Error in line 8: V8qPalfy7 S797 90,0
